adding performance testing